fix project div alignment

--- a/resources/style/index.css
+++ b/resources/style/index.css
@@ -228,7 +228,6 @@ label {
 }
 
 .feature-project div{
-    display: inline;
     float: left;
 }
 
